css/huvis.css
body {
  margin: 0;
  font-family: helvetica, arial, verdana, sans-serif;
}
body, html {
  height: 100%;
  width: 100%;
  background-color: #fff;
}

/* ----------------------------- Markdown Dialogs ------------------------------ */
.markdownDialog ul {
  list-style-type: circle;
}

.markdownDialog ul li {
  list-style-type: circle;
}
.markdownDialog ol li {
  list-style-type: decimal;
}


/* ----------------------------- Node Examiner ------------------------------ */

.contextMenu {
  z-index: 999;
  background-color: white;
  border: 1px grey solid;
  padding: 0 0 0.5em;
  margin: 0.5em 0.5em 1.5em 0.5em;
  font-size: 0.8em;
  box-shadow: 2px 2px 4px 2px #ccc;
  position: absolute;
  display: block;
  border-radius: 5px;
}
.contextMenu .header {
  /*background-color: #157fcc;*/
  background-color: #ccc;
  height: 0.8em;
  margin: 0;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  overflow: hidden;
}
button.close_node_details {
  position: absolute;
  right: 0.1em;
  width: 1.57em;
  height: 1.3em;
  top: 0.1em;
  border-radius: 3px;
  padding: 0;
  border: none;
}
button.close_node_details img:hover{
  opacity: 1;
}
.contextMenu p {
  margin: 0.5em 0.5em 0 1em;
}
.contextMenu p span.label {
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.72em;
  color: #157fcc;
}
.contextMenu .subHeader {
  height: 100%;
  float: right;
}

.contextMenu p.note {
  font-style: italic;
  font-size: 0.7em;
  color: #555;
  margin: 1em 2em 1em 2em;
}
.contextMenu p.note span.label{
  color:inherit;
}
.contextMenu .id_display a{
  font-size: 0.9em;
}
.contextMenu ul {
  margin-top: 0.3em;
  font-size: 0.9em;
}
.contextMenu li {
  list-style-type: none;
}
.contextMenu li i {
  color: #777;
}
.contextMenu li a, .contextMenu .id_display a {
  color: #0056b3;
}
.contextMenu li a:hover, .contextMenu .id_display a:hover  {
  color: #3085e0;
}
.contextMenu button{
  cursor: pointer;
}
.contextMenu i.fa-window-close {
  font-size: 1.5em;
  color: #555;
}

.contextMenu .urlToShare {
  width:200px;
  padding: 6px;
}

.contextMenu .urlCopyButton {
  margin: 1px 2px 4px 0;
  border-top: 1px solid #eee;
  border-right: 1px solid #aaa;
  border-left: 1px solid #eee;
  border-bottom: 1px solid #aaa;
  background-color: #f5f5f5;
  border-radius: 3px;
  color: #666;
  padding: 6px;
  margin: 5px 5px 5px 35%;
}

.contextMenu .loadingNotice {
  width: 200px;
  padding: 30px 25px;
  text-align: center;
}
/* --------------- SVG styles ----------------- */
rect {
  fill: none;
  pointer-events: all;
}
.node circle {
  fill: #000;
/*  stroke: red;
  stroke-width: 1px;
*/
}
.node text {
  font: 7.5px sans-serif;
  pointer-events: none;
  /* text-anchor: middle; */
}
.nearest_node text {
  font: 9px sans-serif;
  fill: #f00
}
.cursor {
  fill: none;
  stroke: #eee;
  pointer-events: none;
}
.link {
  stroke: #CCC;
}
.underneath {
  position: absolute;
  top: 0;
  left: 0;
}
.transient {
  font-style: italic;
}
.snippet_id {
  color: grey;
  float: right;
}

/* --------------- Snippet Dialog Box (edge inspector) ----------------- */

.ui-dialog {
  padding: 0;
  margin: 0.5em;
  box-shadow: 2px 2px 4px 2px #ccc;
}
.ui-dialog .ui-dialog-titlebar {
  background: #157fcc 50% 50% repeat-x;
  padding: 0.2em 0.8em;
  border: none;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.ui-dialog .ui-dialog-title {
  font-size: 0.7em;
  color: white;
  font-weight: normal;
}

.ui-dialog button.ui-dialog-titlebar-close, .ui-dialog button.close-all {
  background-color: #e6e6e6;
  width: 1.0em;
  height: 1.0em;
  border: none;
  position: absolute;
  padding: 0;
  margin: 0;
  top: inherit;
  border-radius: 2px;
}

.ui-dialog button.ui-dialog-titlebar-close {
  right: .3em;
  background-position:initial;
}
.ui-dialog .ui-button .ui-icon, .ui-dialog .ui-button .ui-icon:hover {
    background-image:url('/close_box.png');
    background-position:initial;
    background-size: 0.8em;
    border-style: none;
    background-color:initial;
    margin-top: -0.39em;
    margin-left: -0.38em;
}
.ui-dialog button.ui-dialog-titlebar-close:hover {
  background: #fff none 50% 50% repeat-x;
}
.ui-dialog button.close-all {
  background-size: 0.8em;
  right: 1.7em;
  margin: 0;
  padding: 0;
  width: 1.2em;

}
.ui-dialog button.close-all:hover {
  background: #fff none 50% 50% repeat-x;
}
img.close_all_snippets_button {
  cursor: pointer;
  width: 0.9em;
  height: 0.85em;
  position: relative;
  top: -0.08em;
  margin-left: 0.04em;
}
.ui-dialog .snippet.ui-dialog-content {
  padding-top: 0;
}
div.message_wrapper {
  padding: 0.5em 1em;
  overflow: hidden;
}

.edge_inspector a{
  color: #0056b3;
}
.edge_inspector h3 {
  -webkit-text-size-adjust: none;
  text-transform: uppercase;
  margin-top: 1em;
  margin-bottom: 0.2em;
  clear: both;
  color: #555;
  font-size: 0.8em;
}
.edge_inspector p{
  margin-inline-start: 1.4em;
  margin-top: 0em;
  margin-bottom: 0;
}
.edge_inspector p.pred{
  margin-inline-start: 2.3em;
}
.edge_circle{
   background-color: #000;
   display: block;
   margin-right: 0.5em;
   border-radius: 50%;
   position: absolute;
   height: 1em;
   width: 1em;
}
.edge_arrow {
  position: absolute;
}
.edge_arrow_head{
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 7.5px 0 7.5px 13.0px;
  border-color: transparent transparent transparent #007bff;
  float: left;
  margin-right: 0.5em;
  border-width: 0.8em 0 0.8em 0.8em;
}
.edge_arrow_stem {
  width: 1em;
  height: 0.6em;
  float: left;
  margin-top: .5em;
}

/* --------------- Performance Monitor ----------------- */

.performance_dashboard {
  height: 90%;
  width: 250px;
  background-color: #eee;
  position: absolute;
  left: 0;
  font-size: 12px;
  padding-top: 30px;
  display: none;
}
.sparkline {
  stroke: blue;
  fill: rgba(0, 0, 200, .2);
  background-color: #fdfdfd;
}

.performance_dashboard .feedback_module {
  margin-left: 12px;
}
.performance_dashboard p {
  margin: 0.25em 0;
}

/* ---------------- The SVG and/or CANVAS elements --------- */

.vissvg {
  z-index:-3;
  position: absolute;
  top: 0;
  left: 0;
}

.viscanvas {
  position: absolute;
  top: 0;
  left: 0;
}

.boxNG {
    border: .5px solid black;
    border-radius: .4em;
    display: none;
    padding: .2em;
    position: absolute;
    text-align: center;
    user-select: none;
    background-color: rgb(255,255,255, .9);
    box-shadow: 3px 3px 3px 0px #000000;
}

.boxNGs .boxNG {
    display: inline;
}

.boxNG.focusedNode {
    background-color: #f2f2f2;
    //text-decoration: line-through red;
}

.noBoxes .boxNG {
    border: none;
    margin-top: -0.8em;
    margin-left: .3em;
}

